cards fixed on mobile and DT

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -2,7 +2,6 @@
 @mixin card {
     border-radius: 1rem;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,0.47);
-    text-align: center;
 }
 
 @mixin card-title {
