--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -127,7 +127,7 @@ footer {
     .card-body{
         @include card-body-d;
         color: $grayish-blue;
-        padding-right: 10px;
+        // padding-right: 10px;
     }
 
     .card-img{
@@ -135,8 +135,8 @@ footer {
     }
 
     .card-p-d{
-        padding-left: 50px;
-        padding-right: 50px;
+        padding-left: 10%;
+        padding-right: 10%;
     }
 
 }
